err/tinypie.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinypie'...
Compiling './lib/python3.5/site-packages/tinypie/asmutils.py'...
***   File "./lib/python3.5/site-packages/tinypie/asmutils.py", line 105
    print 'Constant pool:'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinypie/astviz.py'...
***   File "./lib/python3.5/site-packages/tinypie/astviz.py", line 164
    print visualizer
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinypie/interpreter.py'...
***   File "./lib/python3.5/site-packages/tinypie/interpreter.py", line 145
    print value
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinypie/tacparser.py'...
***   File "./lib/python3.5/site-packages/tinypie/tacparser.py", line 168
    print tree.to_string_tree()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinypie/tests'...
Compiling './lib/python3.5/site-packages/tinypie/vm.py'...
***   File "./lib/python3.5/site-packages/tinypie/vm.py", line 155
    print regs[a]
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tinypie-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
